# prompt-sys

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
prompt_toolkit/: __init__.py  config.py
prompt_toolkit/analyzer/: __init__.py  dimensions.py  engine.py  metrics.py
prompt_toolkit/cli/: __init__.py  analyze.py  interactive.py
prompt_toolkit/gui/: __init__.py  analyzer_panel.py  app.py  editor.py  library_panel.py
prompt_toolkit/improver/: __init__.py  rewriter.py  suggestions.py
prompt_toolkit/providers/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
prompts/: 00-interactive-prompt-engineer.md
tests/: test_analyzer.py  test_config.py  test_library.py
tools/: interactive_cli.py  prompt_analyzer.py  requirements.txt  token_optimizer.py
